some changes with paths

--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -8,7 +8,7 @@ dbName='eshop';
 [other]
 sessionLifetime=23;
 isDev=true;
-migrationDirPath='/src/Core/MigrationScripts/';
+migrationDirPath='../src/Core/MigrationScripts/';
 
 
 
