переход с mysqli на pdo

--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -3,12 +3,9 @@ host='localhost';
 user='phpgang';
 password='ilovephp';
 dbName='eshop';
-
+port=3306;
 
 [other]
 sessionLifetime=23;
 isDev=true;
 migrationDirPath='../src/Core/MigrationScripts/';
-
-
-
