Igor K.: рабочая и удовлетворительная версия DI. DI-container внедрен в логику работы Application. Немного изменен config для DI. Роутер теперь принимает вместо callable массив вида ['имяКласса', 'имяМетода']. В Settings и config.ini добавлены поля с путем до DI конфигурации.

--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -9,3 +9,4 @@ port = 3306;
 sessionLifetime = 23;
 isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
+DIConfigPath = '../src/Core/DIConfig.php';
