--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -10,3 +10,4 @@ sessionLifetime = 23;
 isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
 DIConfigPath = '../src/Core/DIConfig.php';
+domainName = 'eshop'
