change imageDirPath in config.ini

--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -15,5 +15,5 @@ sessionLifetime = 23;
 isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
 DIConfigPath = '../src/Core/DIConfig.php';
-imageDirPath = 'img/test/';
+imageDirPath = 'img/';
 domainName = 'eshop'
