--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -14,6 +14,6 @@ bigImageSize = 800;
 sessionLifetime = 23;
 isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
-DIConfigPath = '../src/Core/DIConfig.php';
+ImplementationsConfigPath = '../src/Core/ImplementationsConfig.php';
 imageDirPath = 'img/';
 domainName = 'eshop'
