add flexibility to singletons di

--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -14,6 +14,6 @@ bigImageSize = 800;
 sessionLifetime = 23;
 isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
-ImplementationsConfigPath = '../src/Core/ImplementationsConfig.php';
+DIConfigPath = '../src/Core/DIConfig.php';
 imageDirPath = 'img/';
 domainName = 'eshop'
