--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -16,3 +16,4 @@ isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
 imageDirPath = 'img/';
 domainName = 'eshop'
+logLevel = 'info';
