--- a/src/Core/config.ini
+++ b/src/Core/config.ini
@@ -12,7 +12,7 @@ bigImageSize = 800;
 
 [other]
 sessionLifetime = 23;
-isDev = false;
+isDev = true;
 migrationDirPath = '../src/Core/MigrationScripts/';
 imageDirPath = 'img/';
 domainName = 'eshop'
